@@ -41,12 +41,12 @@ public class Ejercicio402 {
                 1984,
                 "admin",
                 "abc123")){
-            InputStream bais = new ByteArrayInputStream(toStringFicheroPequeño(libros.get(0)).getBytes());
-            session.create("BaseFicherosPequeños",bais);
+            InputStream bais = new ByteArrayInputStream(toStringFicheroPequeño(libros.getFirst()).getBytes());
+            session.create("BaseFicherosPeq.xml",bais);
             for (int i = 1; i < libros.size(); i++) {
                 bais = new ByteArrayInputStream(toStringFicheroPequeño(libros.get(i)).getBytes());
                 session.add("BaseFicherosPequeños/libro_" + i + ".xml",bais);
-                System.out.println(session.info());
+                System.out.println("Fichero pequeño " +session.info());
             }
 
         }catch (IOException e) {
@@ -55,6 +55,13 @@ public class Ejercicio402 {
     }
 
     private void crearFicheroGrande() {
+        try(BaseXClient session = new BaseXClient("localhost",1984,"admin","abc123")){
+            InputStream bais = new ByteArrayInputStream(toStringFicheroGrande(libros).getBytes());
+            session.create("BaseFicheroGrande.xml",bais);
+            System.out.println("Fichero grande " + session.info());
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
     }
 
     private int generarAleatorio(int min, int max){
@@ -70,18 +77,28 @@ public class Ejercicio402 {
         }
     }
 
+    private String toStringFicheroGrande(ArrayList<Libro> libros){
+        StringBuilder resultado = new StringBuilder();
+        resultado.append("<libros>\n");
+        for (Libro l: libros){
+            resultado.append(toStringFicheroPequeño(l));
+        }
+        resultado.append("</libros>");
+        return resultado.toString();
+    }
+
     private String toStringFicheroPequeño(Libro libro){
         StringBuilder sb = new StringBuilder();
-        sb.append("<libro publicacion =\" " + libro.getPublicacion() + "\" edicion = \"" + libro.getEdidicion() + " \"> " )
-                .append("    <titulo>" + libro.getTitulo() + "</titulo>")
-                .append("    <autor>")
-                .append("        <nombre>" + libro.getNombreAutor() + "</nombre>")
-                .append("        <apellido>" + libro.getNombreAutor() + "</apellido>")
-                .append("    </autor>")
-                .append("    <editorial>" + libro.getEditorial() + "</editorial>")
-                .append("    <paginas>" + libro.getTitulo() + "</paginas>")
-                .append("    <edicionElectronica>" + libro.getTitulo() + "</edicionElectronica>")
-                .append("</libro>");
+        sb.append("<libro publicacion =\"" + libro.getPublicacion() + "\" edicion = \"" + libro.getEdidicion() + "\"> \n" )
+                .append("    <titulo>" + libro.getTitulo() + "</titulo>\n")
+                .append("    <autor>\n")
+                .append("        <nombre>" + libro.getNombreAutor() + "</nombre>\n")
+                .append("        <apellido>" + libro.getApellidoAutor() + "</apellido>\n")
+                .append("    </autor>\n")
+                .append("    <editorial>" + libro.getEditorial() + "</editorial>\n")
+                .append("    <paginas>" + libro.getPaginas() + "</paginas>\n")
+                .append("    <edicionElectronica>" + libro.isEdicionElectronica() + "</edicionElectronica>\n")
+                .append("</libro>\n");
         return sb.toString();
     }
 
